--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 div{font-size:50px;}
 </style>
 <body>
-<div>1OJ.CC</div>
-<div>今天真是阳光明媚，薄雾袅袅啊！</div>
-<div>正在筹备创建区块链微博或者区块链说说。 联系方式Email:A@1OJ.CC</div>
+<h1>1OJ.CC</h1>
+<p>今天真是阳光明媚，薄雾袅袅啊！</p>
+<p>正在筹备创建区块链微博或者区块链说说。 联系方式Email:A@1OJ.CC</p>
 
-<div>文档</div>
-<div>一：技术执行标准</div>
-<div>二：用户隐私协议</div>
-<div>三：数组链的应用</div>
-<div>四：关于</div>
+<p>文档</p>
+<p>一：技术执行标准</p>
+<p>二：用户隐私协议</p>
+<p>三：数组链的应用</p>
+<p>四：关于</p>
 
 <h1>一：技术执行标准</h1>
 <p>
