--- a/eval2.html
+++ b/eval2.html
@@ -11,8 +11,17 @@
 <title>Eth private key generation recovery</title>
 </head>
 <style>
+  @font-face{  
+    font-family:'Open Sans Light';
+    src:url(opensans-300.eot),
+    url(opensans-300.ttf),
+    url(opensans-300.woff);
+    font-weight:auto;
+    font-style:auto;
+}
+  *{font-family:'Open Sans Light';}
 div{font-size:50px;}
-*{font-family:'Open Sans Light';}
+
 xmp{
 font-size:15px;
 background:#A3D1D1;
