--- a/sth1.html
+++ b/sth1.html
@@ -21,7 +21,7 @@
 *{font-family: 'Open Sans';font-weight: 300;font-style: normal;}
 
 textarea{
-width:606px;
+width:100%;
 height:150px;
 background:#FFFFFF;
 color: #555555;
