--- a/cc/index.html
+++ b/cc/index.html
@@ -8,9 +8,14 @@
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
 <meta http-equiv="Content-Type" content="text/html; charset=UFT-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <title>ETH私钥生成恢复</title>
 </head>
 <style>
+*{
+
+font-family: 'Open Sans', sans-serif;
+}
 textarea{width:100%;height:50%;}
 </style>
 0xE9A9ACE8839CE698A5;//16进制私钥-马胜春<br>
