--- a/eth/index.html
+++ b/eth/index.html
@@ -94,7 +94,8 @@ function createAccount(){
 	var keyObject = keythereum.dump(newAccountpwd, dk.privateKey, dk.salt, dk.iv, options);
 	//newcreate
 	document.getElementById('jsonStr').value = JSON.stringify(keyObject);
-	document.getElementById('newcreate').innerText="ETH地址:"+JSON.stringify(keyObject)['address'];
+	var jsonaddress=JSON.stringify(keyObject);
+	document.getElementById('newcreate').innerText="ETH地址:"+jsonaddress['address'];
 }
 
 function clean()
