--- a/eth/index.html
+++ b/eth/index.html
@@ -38,13 +38,7 @@ resize:none;
 h1{color: #555555;}
 *{
 border-radius:5px;
-moz-user-select: -moz-none;
--moz-user-select: none;
--o-user-select:none;
--khtml-user-select:none;
--ms-user-select:none;
-user-select:none;
- -webkit-appearance:none;
+ /*-webkit-appearance:none;*/
 }
     
     
