--- a/eth/index.html
+++ b/eth/index.html
@@ -193,7 +193,7 @@ var options = {
 输入密码: <input type="text" id="createpwd" />
 <button type="button" onclick = "createAccount()" >生成账号</button>
 <p id = 'newcreate'></p>
-<textarea id = "jsonStr" rows="10" cols="120">
+<textarea readonly id = "jsonStr" rows="10" cols="120">
 </textarea>
 生成的账号在这里。
 </br>
